--- a/src/core/Renderer/Vulkan/CMakeLists.txt
+++ b/src/core/Renderer/Vulkan/CMakeLists.txt
@@ -3,8 +3,8 @@ PRIVATE
     "VulkanCommandBuffer.cpp"
     "VulkanCommandBuffer.h"
     "VulkanCommon.h"
-    "VulkanDescriptorSet.cpp"
-    "VulkanDescriptorSet.h"
+    "VulkanDescriptorSetOld.cpp"
+    "VulkanDescriptorSetOld.h"
     "VulkanEnums.h"
     "VulkanEvents.h"
     "VulkanExtensions.h"
