chore: work on storage, hot reload and other stuff

--- a/src/core/Storage/CMakeLists.txt
+++ b/src/core/Storage/CMakeLists.txt
@@ -1,5 +1,10 @@
+add_subdirectory(Internal)
+
 target_sources(chronicle-core
 PRIVATE
-    "Storage.cpp"
-    "Storage.h"
+    "Common.h"
+    "File.cpp"
+    "File.h"
+    "StorageContext.cpp"
+    "StorageContext.h"
 )
