--- a/.gitmodules
+++ b/.gitmodules
@@ -16,9 +16,6 @@
 [submodule "vendor/tracy"]
 	path = vendor/tracy
 	url = https://github.com/wolfpld/tracy.git
-[submodule "vendor/spirv-reflect"]
-	path = vendor/spirv-reflect
-	url = https://github.com/KhronosGroup/SPIRV-Reflect.git
 [submodule "vendor/stb"]
 	path = vendor/stb
 	url = https://github.com/nothings/stb.git
@@ -31,3 +28,6 @@
 [submodule "vendor/magic_enum"]
 	path = vendor/magic_enum
 	url = https://github.com/Neargye/magic_enum.git
+[submodule "vendor/efsw"]
+	path = vendor/efsw
+	url = https://github.com/SpartanJ/efsw.git
