chore: refactor in progress

--- a/src/core/Graphics/Vulkan/CMakeLists.txt
+++ b/src/core/Graphics/Vulkan/CMakeLists.txt
@@ -1,5 +1,13 @@
 target_sources(chronicle-core
 PRIVATE
+    "VulkanBuffer.cpp"
+    "VulkanBuffer.h"
+    "VulkanCommandEncoder.cpp"
+    "VulkanCommandEncoder.h"
+    
+    
+    "VulkanDevice.cpp"
+    "VulkanDevice.h"
     "VulkanSystem.cpp"
     "VulkanSystem.h"
 )
