--- a/src/core/Graphics/CMakeLists.txt
+++ b/src/core/Graphics/CMakeLists.txt
@@ -1,11 +1,10 @@
-add_subdirectory(Interfaces)
 add_subdirectory(Vulkan)
 
 target_sources(chronicle-core
 PRIVATE
     "Buffer.h"
+    "CommandEncoder.h"
     "Common.h"
-    "Context.h"
     "Device.h"
     "System.h"
 )
