chore: add sampler

--- a/src/core/Graphics/CMakeLists.txt
+++ b/src/core/Graphics/CMakeLists.txt
@@ -6,6 +6,7 @@ PRIVATE
     "CommandEncoder.h"
     "Common.h"
     "Device.h"
+    "Sampler.h"
     "System.h"
     "Texture.h"
     "TextureView.h"
