--- a/src/core/Graphics/Vulkan/CMakeLists.txt
+++ b/src/core/Graphics/Vulkan/CMakeLists.txt
@@ -7,6 +7,8 @@ PRIVATE
     "VulkanCommon.h"
     "VulkanDevice.cpp"
     "VulkanDevice.h"
+    "VulkanSampler.cpp"
+    "VulkanSampler.h"
     "VulkanSystem.cpp"
     "VulkanSystem.h"
     "VulkanTexture.cpp"
