chore: work in progress

--- a/src/core/Graphics/CMakeLists.txt
+++ b/src/core/Graphics/CMakeLists.txt
@@ -8,7 +8,9 @@ PRIVATE
     "CommandEncoder.h"
     "Common.h"
     "Device.h"
+    "PipelineLayout.h"
     "Sampler.h"
+    "ShaderModule.h"
     "System.h"
     "Texture.h"
     "TextureView.h"
